# opencompanybot

./: .env.example  .gitignore  README.md  astro.config.mjs  main.py  pages.toml  pyproject.toml  wrangler.toml
.github/workflows/: deploy-api.yml  deploy-web.yml
app/: main.py  xml_gateway.py
app/agents/: team.py
app/mcp/: tools.py
app/routers/: companies.py  mcp.py  payment.py
app/services/: ccpayment.py  companies_house.py  hongkong_tpsi.py
web/: package.json
web/public/: _redirects  index.html  robots.txt  sitemap.xml  zh.html
web/public/ae/: index.html
web/public/hk/: index.html
web/public/sg/: index.html
web/public/uk/: index.html
web/public/us/: index.html
