[project]
name = "opencompanybot"
version = "0.1.0"
description = "AI-powered company registration API"
requires-python = ">=3.11"

[project.dependencies]
fastapi = ">=0.115.0"
pydantic = ">=2.0.0"
httpx = ">=0.27.0"
python-dotenv = ">=1.0.0"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
