[project]
name = "opencompanybot"
version = "0.1.0"
description = "AI-powered company registration API"
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
